added h1 with text matts change

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@ Learn how to configure a non-root public URL by running `npm run build`.
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
+  <h1> Matts Change</h1>
   <div class='jumbotron text-center'>
     <h1>App Title</h1>
   </div>
